# CodCov

./: .travis.yml  CMakeLists.txt  README.md
Calculator/: CMakeLists.txt  calculator.hpp  testCalculator.cpp
Hello/: CMakeLists.txt  hello.cpp
